--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+
+<!-- Header with h1 and 3 images -->
     <header>
-        
+        <h1>Il mio viaggio a Londra</h1>
+        <img src="img/london1.jpg" alt="Immagine che rafigura la famosissima ruota panoramica London Eye">
+        <img src="img/london2.jpg" alt="Immagine da cui da lontano si scorge il London Bridge">
+        <img src="img/london3.jpg" alt="Immagine che rafigura il palazzo di Westminster">
     </header>
 </body>
 </html>
