--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <img src="img/london3.jpg" alt="Immagine che rafigura il palazzo di Westminster">
         <hr>
     </header>
+    <main>
+        
+    </main>
 
 </body>
 </html>
