--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<!-- Header with h1 and 3 images -->
+   <!-- Header with h1 and 3 images -->
     <header>
         <h1>Il mio viaggio a Londra</h1>
         <img src="img/london1.jpg" alt="Immagine che rafigura la famosissima ruota panoramica London Eye">
@@ -15,8 +15,10 @@
         <img src="img/london3.jpg" alt="Immagine che rafigura il palazzo di Westminster">
         <hr>
     </header>
+    
+    <!-- Main with 3 sections -->
     <main>
-        
+        <h2>Le mie spese</h2>
     </main>
 
 </body>
