--- a/index.html
+++ b/index.html
@@ -28,6 +28,28 @@
                         <th> Costo</th>
                     </tr>
                 </thead>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                    <tfoot>
+                        <tr>
+                            <td>Totale</td>
+                            <td></td>
+                            <td>360€</td>
+                        </tr>
+                    </tfoot>
+                </tr>
             </table>
         </div>
             
