Starting third section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
             </ul>
             <hr>
         </div>
+
+        <!-- Third section -->
+        <div>
+            <h2>Info utili</h2>
+            <ol>
+
+            </ol>
+            <hr>
+        </div>
     </main>
 
 </body>
