Ordered list (number 1, 2 and 3)

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         <div>
             <h2>Info utili</h2>
             <ol>
-
+                <li>Numeri utili di emergenza</li>
+                <li>Hotel</li>
+                <li>Aereo</li>
             </ol>
             <hr>
         </div>
