--- a/index.html
+++ b/index.html
@@ -96,5 +96,10 @@
         </div>
     </main>
 
+    <!-- Footer with 2 photos, not in local-->
+    <footer>
+        <h3>Le Foto</h3>
+    </footer>
+
 </body>
 </html>
