--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
     <!-- Footer with 2 photos, not in local-->
     <footer>
         <h3>Le Foto</h3>
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Foto del Millennium Bridge ">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Foto del London Bridge">
     </footer>
 
 </body>
