--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <div>
             <h2>Cose da fare</h2>
             <ul>
-                <li>Visitare la Tower of London</li>
-                <li>Visitare Greenwich</li>
-                <li>Ascoltare un artista di strada a Covent Garden</li>
-                <li>Mangiare il tipico Fish and Chips inglese</li>
+                <li>Visitare la Tower of London &#10003;</li>
+                <li>Visitare Greenwich &#10005;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#10005;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#10003;</li>
             </ul>
             <hr>
         </div>
